<resources>
    <string name="app_name">Choizy Company</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apikeymap">AIzaSyAokIlf3kA2V3nPkJcIrZsnY7Yat3ISSwU</string>
    <string name="branch">Branch</string>
    <string name="advertising">Advertising</string>
    <string name="offers">offers</string>
    <string name="profile">Profile</string>
    <string name="re_password">Re-Password</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="street_address">Street Address</string>
    <string name="gmail">Gmail</string>
    <string name="mobile">Mobile</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="branch_name">Branch Name</string>
    <string name="add_offer">Add Offer</string>
    <string name="change_password">Change Password</string>
    <string name="add_advertisement">Add Advertisement</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="orders">Orders</string>
    <string name="sales_history">Sales History</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="features">Features</string>
    <string name="update">Update</string>
    <string name="total">Total :</string>

    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="company_name">Company Name</string>
    <string name="email_blank_valid">Please enter email address</string>
    <string name="pass_blank_valid">Please enter Password</string>
    <string name="title_activity_location_picker">location_picker</string>
</resources>