<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/compProfileUpdate_Icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,2:1"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        app:srcCompat="@drawable/ic_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/compProfileUpdate_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/compProfileUpdate_Icon"
        app:layout_constraintStart_toStartOf="@+id/compProfileUpdate_Icon"
        app:layout_constraintTop_toBottomOf="@+id/compProfileUpdate_Icon"
        app:layout_constraintVertical_bias="0.060000002"
        app:layout_constraintWidth_percent="0.9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/compProfileUpdate_Name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/compProfileUpdate_Email"
        app:layout_constraintStart_toStartOf="@+id/compProfileUpdate_Email"
        app:layout_constraintTop_toBottomOf="@+id/compProfileUpdate_Email"
        app:layout_constraintVertical_bias="0.06">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/compProfileUpdate_Mobile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/compProfileUpdate_Name"
        app:layout_constraintStart_toStartOf="@+id/compProfileUpdate_Name"
        app:layout_constraintTop_toBottomOf="@+id/compProfileUpdate_Name"
        app:layout_constraintVertical_bias="0.08">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/compProfileUpdate_CategoryTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/compProfileUpdate_Mobile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/compProfileUpdate_Mobile"
        app:layout_constraintTop_toBottomOf="@+id/compProfileUpdate_Mobile"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/compProfileUpdate_UpdateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/compProfileUpdate_Mobile"
        app:layout_constraintStart_toStartOf="@+id/compProfileUpdate_Mobile"
        app:layout_constraintTop_toBottomOf="@+id/compProfileUpdate_CategoryTxt"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/compProfileUpdate_UpdateImg"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/compProfileUpdate_Icon"
        app:layout_constraintEnd_toEndOf="@+id/compProfileUpdate_Icon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/compProfileUpdate_Icon"
        app:layout_constraintTop_toTopOf="@+id/compProfileUpdate_Icon"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_camera"
        android:scaleType="fitCenter"
        android:elevation="26dp"


        />


</androidx.constraintlayout.widget.ConstraintLayout>